--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ body.akmdark-mode input[type="datetime-local"]::-webkit-calendar-picker-indicato
 }
 
 .akmempty-state i {
-  font-size: 2.5rem;
+  font-size: 15px;
   margin-bottom: 12px;
   color: var(--secondary-color);
 }
@@ -1246,11 +1246,11 @@ body.akmdark-mode input[type="datetime-local"]::-webkit-calendar-picker-indicato
       <div class="akmstats-grid"> 
        <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_sales_today">Sales Today</span> <span class="akmstat-value" id="total-orders">0</span> <span class="akmstat-change akmup"><i class="fas fa-arrow-up"></i><span>-</span></span> 
        </div> 
-       <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_todays_profit">Today's Profit</span> <span class="akmstat-value" id="net-profit">0 ကျပ်</span> <span class="akmstat-change akmdown"><i class="fas fa-arrow-down"></i><span>-</span></span> 
+       <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_todays_profit">Today's Profit</span> <span class="akmstat-value" id="net-profit">0 ကျပ်</span> <span class="akmstat-change akmdown"><i class="fas fa-chart-line"></i><span>-</span></span> 
        </div> 
-       <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_sales_revenue">Sales Revenue</span> <span class="akmstat-value" id="sales-revenue">0</span> <span class="akmstat-change akmup"><i class="fas fa-arrow-up"></i><span>-</span></span> 
+       <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_sales_revenue">Sales Revenue</span> <span class="akmstat-value" id="sales-revenue">0</span> <span class="akmstat-change akmup"><i class="fas fa-wallet"></i><span>-</span></span> 
        </div> 
-       <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_low_stock">Low Stock Items</span> <span class="akmstat-value" id="low-stock-items">0</span> <span class="akmstat-change akmdown"><i class="fas fa-arrow-down"></i><span>-</span></span> 
+       <div class="akmstat-card"> <span class="akmstat-title" data-translate="stat_low_stock">Low Stock Items</span> <span class="akmstat-value" id="low-stock-items">0</span> <span class="akmstat-change akmdown"><i class="fas fa-exclamation-triangle"></i><span>-</span></span> 
        </div> 
       </div> 
      </div> 
